Tailwind CLI setup and cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "liveServer.settings.port": 5501
+  "liveServer.settings.root": "/",
+  "liveServer.settings.port": 5501,
+  "liveServer.settings.https": {
+    "key": "/Users/ivyrobi/localhost-key.pem",
+    "cert": "/Users/ivyrobi/localhost.pem",
+    "enable": true
+  }
 }
